Fix map label wrapping

--- a/ui/src/assets/components/css/leaflet_item.css
+++ b/ui/src/assets/components/css/leaflet_item.css
@@ -22,6 +22,10 @@
   background-color:rgba(100, 100, 100, 1.0);
   /*color: rgb(0,0,0);*/
   color: rgb(255, 255, 255);
+  /* Stop label wrapping */
+  display: inline-block;
+  white-space: nowrap;
+  /*--------------------*/
   text-align: center;
   position: absolute;
   padding-top: 2px;
